# pyABC

./: .ci_pip_reqs.txt  .codacy.yml  .coveragerc  .environment.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rtd_conda_env.yml  .rtd_pip_reqs.txt  .travis.yml  .travis_pip_reqs.txt  CHANGELOG.rst  CITE.rst  CONTRIBUTE.rst  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  cli.py  environment.yml  flake8_exclude.txt  pyproject.toml  readthedocs.yml  references.rst  requirements-dev.txt  requirements.txt  run_flake8.sh  sampler.py  setup.cfg  setup.py  smc.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  ci_dependencies.sh  ci_external.yml  ci_petab.yml  ci_pr.yml  ci_push.yml  deploy.yml  generate_readme_rst.py  install_deps.sh  joss.yml
data/: README.md  Snakefile  todo.md
data/plotter/: nr_particles_over_t.py  population_over_t.py
data/producer/: gillespie.py  prey_predator.py  stumpf2010preypredator.py  toy_example  toy_example.py
data/transformer/: __init__.py  kde_fit.py  modes_nr_particles_overt_t.py  population_over_t.py  population_over_time.py  prey_predator_abc.py  prey_predator_plot.py
devideas/: ABCToyExample.ipynb  KDE Bandwidth exploration.ipynb  all_in_one_model.rst  bench.py  distributed.rst  kanban.rst  kde.rst  mapper.rst  modelapi.rst  modelapiideas.py  todos.rst
doc/: Makefile  abcsmc_api.rst  about.rst  acceptor_api.rst  api.rst  api_abcsmc.rst  api_acceptor.rst  api_copasi.rst  api_datastore.rst  api_distance.rst  api_epsilon.rst  api_external.rst  api_inference.rst  api_model.rst  api_parameters.rst  api_petab.rst  api_population.rst  api_populationstrategy.rst  api_predictor.rst  api_random_variables.rst  api_reference.rst  api_sampler.rst  api_sge.rst  api_sumstat.rst  api_transition.rst  api_visualization.rst  api_weightedstatistics.rst  cite.rst  code.rst  conf.py  contribute.rst  datastore.rst  datastore_api.rst  deploy.rst  distance_api.rst  documentation.rst  epsilon_api.rst  examples.rst  export_db.rst  external_API.rst  (+26 more)
doc/ABCLoader/: abc_quick_plots.rst
doc/examples/: Data plots.ipynb  R_integraiton.ipynb  acceptance.ipynb  adaptive_distance.ipynb  adaptive_distances.ipynb  adaptive_distances2.ipynb  aggregated_distances.ipynb  chemical_reaction.ipynb  chemical_reaction_parallel.ipynb  conversion_reaction.ipynb  custom_priors.ipynb  data_plots.ipynb  discrete_parameters.ipynb  early_stopping.ipynb  external_simulators.ipynb  gaussian1.py  gaussian_cd.py  gk.py  informative.ipynb  loadDF.R  look_ahead.ipynb  model_selection.ipynb  morpheus.ipynb  multiscale_agent_based.ipynb  myRModel.R  noise.ipynb  noisy.py  optimal_threshold.ipynb  parallelization.ipynb  parameter_inference.ipynb  petab.ipynb  petab_application.ipynb  petab_yaml2sbml.ipynb  prangle2015_examples.ipynb  pyABC_blueprint.R  quickstart.ipynb  resume_run.ipynb  resuming.ipynb  sde_ion_channels.ipynb  sumstatlearn.ipynb  (+4 more)
doc/joss_0_12/: paper.bib  paper.md
doc/logo/: LICENSE.txt  logo.emf  logo.eps
doc/redis_setup/: redis_start_output.txt
examples/: quickstart.py  quickstart_modified.py
parallel/: __init__.py  cleanup_sge_array_job.py  db.py  execute_sge_array_job.py  execution_contexts.py  sampler.py  test_sge.py  util.py
parallel/sampler/: base.py  mapping.py  multicore.py  singlecore.py
pyabc/: __init__.py  acceptor.py  distance_functions.py  epsilon.py  external.py  inference_util.py  legacy_covariance.py  loader.py  model.py  modelresults.py  parameters.py  perturbation.py  petab.py  platform_factory.py  population.py  populationsize.py  populationstrategy.py  predictor.py  pyabc_rand_choice.py  random.py  random_choice.py  random_variables.py  settings.py  smc.py  storage.py  transition.py  util.py  version.py  visualization.py  weighted_statistics.py  xmlManager.py
pyabc/acceptor/: __init__.py  acceptor.py  pdf_max_eval.py  pdf_norm.py  temperature_scheme.py  util.py
pyabc/britney/: base.py  distance.py  scale.py  sumstat.py  util.py
pyabc/copasi/: __init__.py  model.py
pyabc/cv/: __init__.py  bootstrap.py  powerlaw.py
pyabc/distance/: __init__.py  aggregate.py  base.py  distance.py  kernel.py  ot.py  pnorm.py  scale.py  scales.py  util.py
pyabc/distance_functions/: __init__.py  comparator.py  distance_functions.py  scales.py  stochastic_kernel.py
pyabc/epsilon/: __init__.py  acceptance_rate.py  base.py  epsilon.py  silk.py  temperature.py
pyabc/inference/: __init__.py  smc.py  util.py
pyabc/inference_util/: __init__.py  inference_util.py
pyabc/model/: __init__.py  model.py
pyabc/parallel/: __init__.py  cleanup_sge_array_job.py  db.py  execute_sge_array_job.py  execution_contexts.py  job_info_redis.py  sge.py  test_sge.py
pyabc/parameters/: __init__.py  parameters.py
pyabc/petab/: __init__.py  amici.py  base.py
pyabc/population/: __init__.py  population.py
pyabc/populationstrategy/: __init__.py  populationstrategy.py
pyabc/predictor/: __init__.py  predictor.py
pyabc/sampler/: __init__.py  (+11 more)
style/: __init__.py  color.py  formatter.py  labelpad.py  line.py  name.py  plot.py  plotstyle.py  size.py
test/: __init__.py  conftest.py  run_notebooks.sh  server.py  test_acceptor.py  test_bytesstorage.py  test_dataframeserialization.py  test_distance_conversion.py  test_distance_function.py  test_epsilon.py  test_external.py  test_flake8compliant.py  test_macos.py  test_multicore_sampler.py  test_multiprocessing.py  test_multithreaded.py  test_numpy_bytes_storage.py  test_parameter.py  test_petab.py  test_population.py  test_populationstrategy.py  test_posterior_estimation.py  test_posterior_plotter.py  test_quickstart.py  test_random_variable_composition.py  test_resume_run.py  test_samplers.py  test_stop_sampling.py  test_storage.py  test_transition.py  test_visualization.py  test_weighted_statistics.py  xmlManager.py
test_nondeterministic/: __init__.py  test_abc_smc_algorithm.py  test_posterior_estimation.py
test_performance/: __init__.py  test_data.py  test_parameter.py  test_random_choice.py  test_samplerperf.py
visserver/: server.py
(+202 files in other folders)
