[build-system]
requires = [
  "setuptools>=68.0.0",
  "wheel>=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyabc"
dynamic = ["version"]

description = "Distributed, likelihood-free ABC-SMC inference"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

authors = [{ name = "The pyABC developers", email = "jan.hasenauer@uni-bonn.de" }]
maintainers = [{ name = "Jonas Arruda", email = "jonas.arruda@uni-bonn.de" }]

license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]

keywords = [
  "likelihood-free",
  "inference",
  "abc",
  "approximate Bayesian computation",
  "sge",
  "distributed",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "numpy>=1.23.5",
  "scipy>=1.5.2",
  "pandas>=2.0.1",
  "cloudpickle>=1.5.0",
  "scikit-learn>=0.23.1",
  "click>=7.1.2",
  "redis>=2.10.6",
  "distributed>=2024.2.0",
  "matplotlib>=3.3.0",
  "sqlalchemy>=2.0.0",
  "jabbar>=0.0.10",
  "gitpython>=3.1.7",
  "ipykernel>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/icb-dcm/pyabc"
Download = "https://github.com/icb-dcm/pyabc/releases"
"Bug Tracker" = "https://github.com/icb-dcm/pyabc/issues"
Documentation = "https://pyabc.readthedocs.io"
Changelog = "https://github.com/ICB-DCM/pyABC/blob/main/CHANGELOG.rst"
Repository = "https://github.com/icb-dcm/pyabc"
"Source Code" = "https://github.com/icb-dcm/pyabc"

[project.optional-dependencies]
webserver-flask = [
  "flask-bootstrap>=3.3.7.1",
  "flask>=1.1.2",
  "bokeh>=3.0.1",
]
webserver-dash = [
  "dash>=2.11.1",
  "dash-bootstrap-components>=1.4.2",
]
pyarrow = ["pyarrow>=22.0.0"]
r = [
  "rpy2>=3.4.4",
  "cffi>=1.14.5",
  "ipython>=7.18.1",
  "pygments>=2.6.1",
]
julia = [
  "julia>=0.6.2",
  "pygments>=2.6.1",
  "ipython>=7.18.1",
]
copasi = ["copasi-basico>=0.8"]
ot = [
  "pot>=0.7.0",
  "cython>=0.29.0",
]
petab = ["petab>=0.2.0"]
#petab-test = ["petabtests>=0.0.1"]  # problem with pysb
amici = ["amici>=0.32.0,<1.0.0"]
yaml2sbml = ["yaml2sbml>=0.2.1"]
migrate = ["alembic>=1.5.4"]
plotly = ["plotly>=5.3.1", "kaleido>=0.2.1"]
autograd = ["autograd>=1.3"]
examples = ["notebook>=6.1.4"]
doc = [
  "sphinx>=8.1.3",
  "nbsphinx>=0.9.5",
  "nbconvert>=7.16.4",
  "sphinx-rtd-theme>=2.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
  "ipython>=8.4.0",
  "sphinx-autobuild>=2021.3.14",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pytest-rerunfailures>=14.0.0",
  "pytest-xdist>=3.5.0",
  "coverage[toml]>=7.0.0",
]

[project.scripts]
abc-server-flask = "pyabc.visserver.server_flask:run_app"
abc-server-dash = "pyabc.visserver.server_dash:run_app"
abc-server = "pyabc.visserver.server_dash:run_app"
abc-redis-worker = "pyabc.sampler.redis_eps.cli:work"
abc-redis-manager = "pyabc.sampler.redis_eps.cli:manage"
abc-export = "pyabc.storage.db_export:main"
abc-migrate = "pyabc.storage.migrate:migrate"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "pyabc.version.__version__" }

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B905",  # zip() without an explicit strict= parameter
  "SIM105",  # Replace `try`-`except`-`pass`
  "C408",
  "E402"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"test/**" = ["ARG", "SIM"]  # Allow unused arguments and complex logic in tests

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
testpaths = ["test", "test_performance"]
pythonpath = ["."]

[tool.coverage.run]
source = ["pyabc"]
parallel = true
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.paths]
source = [
  "pyabc",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "tox>=4.38.0",
  "ruff>=0.8.0",
  "build>=1.0.0",
  "twine>=4.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.5.0",
]
