##########################
# Setup.py Configuration #
##########################

[metadata]
name = pyabc
description = Distributed, likelihood-free ABC-SMC inference
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/icb-dcm/pyabc
download_url = https://github.com/icb-dcm/pyabc/releases
project_urls =
    Bug Tracker = https://github.com/icb-dcm/pyabc/issues
    Documentation = https://pyabc.readthedocs.io
    Changelog = https://pyabc.readthedocs.io/en/latest/releasenotes.html

# Author information
author = The pyABC developers
author_email = yannik.schaelte@gmail.com
maintainer = Yannik Schaelte
maintainer_email = yannik.schaelte@gmail.com

# License information
license = BSD-3-Clause
license_file = LICENSE.txt

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    likelihood-free
    inference
    abc
    approximate bayesian computation
    sge
    distributed

[options]
install_requires =
    numpy >= 1.19.1
    scipy >= 1.5.2
    pandas >= 1.0.5
    cloudpickle >= 1.5.0
    flask_bootstrap >= 3.3.7.1
    flask >= 1.1.2
    bokeh >= 2.1.1
    redis >= 2.10.6
    dill >= 0.3.2
    gitpython >= 3.1.7
    scikit-learn >= 0.23.1
    matplotlib >= 3.3.0
    sqlalchemy >= 1.3.18
    click >= 7.1.2
    feather-format >= 0.4.1
    distributed >= 2.21.0
    pygments >= 2.6.1
    ipython >= 7.16.1
    pyarrow >= 1.0.0
    jabbar >= 0.0.7

python_requires = >=3.6
setup_requires = setuptools
# not zip safe b/c of Flask templates
zip_safe = False
include_package_data = True

# Where is my code
packages = find:

[options.extras_require]
R =
    rpy2 >= 3.2.0
    cffi >= 1.13.1
petab =
    petab >= 0.1.8
    amici >= 0.11.5
docs =
    sphinx >= 3.1.0
    nbsphinx >= 0.7.0
    nbconvert >= 5.6.1
    sphinx-rtd-theme >= 0.4.3
test =
    pytest >= 5.4.3
    pytest-cov >= 2.10.0
quality =
    flake8 >= 3.8.3
    flake8-colors >= 0.1.6
    flake8-bandit >= 2.1.2
    flake8-bugbear >= 20.1.4
    flake8-commas >= 2.0.0
    flake8-comprehensions >= 3.2.3
    flake8-print >= 3.1.4
    pygments >= 2.6.1
    pyroma >= 2.6
    restructuredtext_lint >= 1.3.1

[options.entry_points]
console_scripts =
    abc-server = pyabc.visserver.server:run_app
    abc-redis-worker = pyabc.sampler.redis_eps.cli:work
    abc-redis-manager = pyabc.sampler.redis_eps.cli:manage
    abc-export = pyabc.storage.export:main

[bdist_wheel]
# requires python 3
universal = False
