##########################
# Setup.py Configuration #
##########################

[metadata]
name = pyabc
version = attr: pyabc.version.__version__
description = Distributed, likelihood-free ABC-SMC inference
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs
url = https://github.com/icb-dcm/pyabc
download_url = https://github.com/icb-dcm/pyabc/releases
project_urls =
    Bug Tracker = https://github.com/icb-dcm/pyabc/issues
    Documentation = https://pyabc.readthedocs.io
    Changelog = https://pyabc.readthedocs.io/en/latest/releasenotes.html

# Author information
author = The pyABC developers
author_email = yannik.schaelte@gmail.com
maintainer = Yannik Schaelte
maintainer_email = yannik.schaelte@gmail.com

# License information
license = BSD-3-Clause
license_file = LICENSE.txt

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    likelihood-free
    inference
    abc
    approximate bayesian computation
    sge
    distributed

[build-system]
requires =
    wheel
    setuptools

[options]
install_requires =
    numpy >= 1.19.1
    scipy >= 1.5.2
    pandas >= 1.2.0
    cloudpickle >= 1.5.0
    scikit-learn >= 0.23.1
    click >= 7.1.2
    redis >= 2.10.6
    distributed >= 2.21.0
    matplotlib >= 3.3.0
    sqlalchemy >= 1.3.18
    pyarrow >= 1.0.0
    jabbar >= 0.0.10
    gitpython >= 3.1.7

python_requires = >=3.6
# not zip safe b/c of Flask templates
zip_safe = False
include_package_data = True

# Where is my code
packages = find:

[options.extras_require]
webserver =
    flask_bootstrap >= 3.3.7.1
    flask >= 1.1.2
    bokeh >= 2.1.1
R =
    rpy2 >= 3.4.4
    cffi >= 1.14.5
    ipython >= 7.18.1
    pygments >= 2.6.1
petab =
    petab >= 0.1.18
amici =
    amici >= 0.11.19
yaml2sbml =
    yaml2sbml >= 0.2.1
migrate =
    alembic >= 1.5.4
plotly =
    plotly >= 5.3.1
    kaleido >= 0.2.1
examples =
    notebook >= 6.1.4
doc =
    sphinx >= 3.1.0, <4.0.0
    nbsphinx >= 0.7.0
    nbconvert >= 5.6.1
    sphinx-rtd-theme >= 0.4.3
    sphinx_autodoc_typehints >= 1.11.1
    ipython >= 7.18.1
test =
    pytest >= 5.4.3
    pytest-cov >= 2.10.0
    pytest-rerunfailures >= 9.1.1
test_petab =
    petabtests >= 0.0.0a6

[options.entry_points]
console_scripts =
    abc-server = pyabc.visserver.server:run_app
    abc-redis-worker = pyabc.sampler.redis_eps.cli:work
    abc-redis-manager = pyabc.sampler.redis_eps.cli:manage
    abc-export = pyabc.storage.export:main
    abc-migrate = pyabc.storage.migrate:migrate

[bdist_wheel]
# Requires python 3
universal = False
